# robot_simple_command_manager_msgs

./: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
action/: CommandStringAction.action
cmake/: CMakeListsROS1.txt  CMakeListsROS2.txt
msg/: Categories.msg  CommandCategory.msg  EventSchedulerArray.msg  HandlerInfo.msg
srv/: GetHandlerInfo.srv  SetCommandString.srv
