<?xml version="1.0"?>

<package format="3">

  <name>robot_simple_command_manager_msgs</name>

  <version>0.11.0</version>

  <description>
    The robot_simple_command_manager_msgs package

  </description>

 <maintainer email="aarnal@robotnik.es">Alex Arnal</maintainer>
  <maintainer email="rnavarro@robotnik.es">Roman Navarro</maintainer>


  <license>TODO</license>

  <author email="omar.eldardeer@iit.it">Omar Eldardeer</author>

    <!--  ROS1 dependencies -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <build_depend condition="$ROS_VERSION == 1">actionlib_msgs</build_depend>
  <!--build_depend condition="$ROS_VERSION == 1">diagnostic_msgs</build_depend-->
  <!--build_depend condition="$ROS_VERSION == 1">diagnostic_updater</build_depend-->
  <build_export_depend condition="$ROS_VERSION == 1">std_msgs</build_export_depend>
  <!--build_export_depend condition="$ROS_VERSION == 1">diagnostic_msgs</build_export_depend-->
  <!--build_export_depend condition="$ROS_VERSION == 1">diagnostic_updater</build_export_depend-->
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">std_msgs</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">actionlib_msgs</exec_depend>
  <!--exec_depend condition="$ROS_VERSION == 1">diagnostic_msgs</exec_depend-->
  <!--exec_depend condition="$ROS_VERSION == 1">diagnostic_updater</exec_depend-->
  <!--exec_depend condition="$ROS_VERSION == 1">diagnostic_aggregator</exec_depend-->
  <!--exec_depend condition="$ROS_VERSION == 1">sensor_msgs</exec_depend-->

  <!--  ROS2 dependencies -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>
  
  
  <build_depend condition="$ROS_VERSION == 2">message_generation</build_depend>
  <build_depend condition="$ROS_VERSION == 2">actionlib_msgs</build_depend>


  
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">message_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">vision_msgs</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">std_msgs</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">actionlib_msgs</exec_depend>
  <!--exec_depend condition="$ROS_VERSION == 2">diagnostic_msgs</exec_depend-->
  <!--exec_depend condition="$ROS_VERSION == 2">diagnostic_updater</exec_depend-->
  <!--exec_depend condition="$ROS_VERSION == 2">diagnostic_aggregator</exec_depend-->

  <!-- common dependencies -->
  <depend>std_msgs</depend>
  <!--depend>diagnostic_msgs</depend-->
  <!--depend>diagnostic_updater</depend-->
  <!--depend>diagnostic_aggregator</depend-->

  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <ros1_bridge mapping_rules="map_rules.yaml"/>
  </export>

</package>
